versão funcionando pythonanywhere

--- a/templates/index.html
+++ b/templates/index.html
@@ -51,7 +51,7 @@
 
         input[type="submit"] {
             background-color: #4caf50;
-            color: #fff;
+            color: #b622b6;
             cursor: pointer;
         }
 
@@ -78,7 +78,7 @@
     <!-- <img src="{{ url_for('static', filename='images/pngtree-compass-on-a-stylized-map-image_1632501.png') }}" alt="Logo do Seu Aplicativo"> -->
     <h1>Obtenha a rota</h1>
     
-    <form action="{{ url_for('index') }}" method="post" enctype="multipart/form-data">
+    <form action="{{ url_for('index') }}" method="post" enctype="multipart/form-data" style="max-width: 400px; margin: 20px 0; padding: 20px; border: 1px solid #ddd; border-radius: 5px; background-color: #fff;">
         <label for="arquivo_csv">Escolha o arquivo CSV:</label>
         <input type="file" id="arquivo_csv" name="arquivo_csv" accept=".csv" required>
 
@@ -96,5 +96,10 @@
         
         <input type="submit" value="Criar Mapa">
     </form>
+    {% if mapa_gerado %}
+        <iframe src="{{ url_for('static', filename='mapa_deslocamento.html') }}" width="100%" height="600px"></iframe>
+    {% endif %}
+
+
 </body>
 </html>
