--- a/static/stilo.css
+++ b/static/stilo.css
@@ -7,8 +7,8 @@ body {
     flex-direction: column;
     min-height: 100vh;
     align-items: center;
-    background-image: url('/static/imagens/polvo-estilizado-34028423.webp');
-    background-size: 75%; /* Ajuste o tamanho da imagem de fundo */
+    background-image: url('/static/imagens/matrix3.jpg');
+    background-size: 100%; /* Ajuste o tamanho da imagem de fundo */
     background-position: center; /* Centralize a imagem */
     background-repeat: no-repeat;
 }
